# raspberry-paper-to-cot-pipeline

./: .gitignore  CODING_GUIDELINES.md  CODING_GUIDELINES_PYTHON.md  README.md  cli.sh  mermaid-prompt.txt  pull-arxiv-papers.py  pyproject.toml  requirements.txt  sample.env
lwe/config/profiles/default/: config.yaml
lwe/config/profiles/default/presets/: claude-opus.yaml  claude-sonnet-openrouter.yaml  claude-sonnet.yaml  gemini-1.5-pro-002.yaml  gpt-4o.yaml  llama-3.1-405b.yaml  llama-3.2-90b.yaml
lwe/config/profiles/default/templates/: raspberry-cot-critique.md  raspberry-cot-extraction.md  raspberry-cot-quality-assessor.md  raspberry-cot-refine.md  raspberry-cot-verifier.md  raspberry-cot-voice.md  raspberry-cot-voicing-assessor.md  raspberry-cot-voicing.md  raspberry-extract-cot.md  raspberry-paper-grading-rubric.md  raspberry-paper-profiler.md
lwe/config/profiles/default/workflows/: raspberry-paper-cleaner-clean.yaml  raspberry-paper-cleaner.yaml  raspberry-paper-profiler-profile.yaml  raspberry-paper-profiler.yaml  raspberry-paper-rubric-grader-grade.yaml  raspberry-paper-rubric-grader.yaml  raspberry-paper-scorer-score.yaml  raspberry-paper-scorer.yaml  raspberry-paper-to-cot-extraction-extract.yaml  raspberry-paper-to-cot-extraction.yaml
misc/: database-monitoring.md  mermaid-config.json  mermaid-instructions.md  monitor-cleaning.md  pipeline-diagram.mmd  select-equal-papers-per-category.sql
papers/: astro-ph.EP.txt  cond-mat.stat-mech.txt  cs.AI.txt  cs.CL.txt  cs.CV.txt  cs.CY.txt  cs.DS.txt  cs.GT.txt  cs.HC.txt  cs.LG.txt  cs.LO.txt  cs.RO.txt  cs.SE.txt  cs.SI.txt  econ.EM.txt  econ.GN.txt  econ.TH.txt  eess.SP.txt  math.HO.txt  math.LO.txt  math.OC.txt  physics.ed-ph.txt  physics.hist-ph.txt  physics.soc-ph.txt  q-bio.PE.txt  q-bio.QM.txt  q-fin.PM.txt  q-fin.RM.txt  stat.AP.txt  stat.ME.txt
raspberry_paper_to_cot_pipeline/: __init__.py  base_scorer.py  clean_paper_urls.py  constants.py  cot_quality_assessor.py  cot_quality_scorer.py  cot_verifier.py  cot_voicing.py  cot_voicing_assessor.py  cot_voicing_scorer.py  fetch_arxiv_paper_urls_by_category.py  fetch_paper_urls.py  fine_tune_openai.py  generate_training_data.py  paper_cot_extractor.py  paper_cot_pipeline.py  paper_extract_cot.py  paper_profile_scorer.py  paper_profiler.py  paper_scorer.py  prepare_training_data.py  utils.py
scripts/: clean-paper-urls.py  fetch-paper-urls.py  fetch-papers.py  fetch-papers.sh  fetch_arxiv_papers_by_category.py  pull_arxiv_papers.py  raspberry-extract-cot.py  raspberry-paper-grading.py  raspberry-paper-profiler.py  raspberry-paper-scorer.py
urls/: raspberry-paper-urls.txt
