[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "raspberry_paper_to_cot_pipeline"
version = "0.1.0"
description = "A pipeline for processing research papers"
requires-python = ">=3.7"
dependencies = [
    "beautifulsoup4",
    "datasets",
    "python-dateutil",
    "requests",
    "tenacity",
]

[project.optional-dependencies]
dev = [
    "pip-tools",    # For dependency management
    "pytest",       # For testing
    "black",        # For code formatting
    "isort",        # For import sorting
    "mypy",         # For type checking
    "flake8",       # For linting
]

[project.scripts]
raspberry-fetch-paper-urls = "raspberry_paper_to_cot_pipeline.fetch_paper_urls:main"
raspberry-fetch-arxiv-paper-urls-by-category = "raspberry_paper_to_cot_pipeline.fetch_arxiv_paper_urls_by_category:main"
raspberry-paper-profiler = "raspberry_paper_to_cot_pipeline.paper_profiler:main"
raspberry-paper-profile-scorer = "raspberry_paper_to_cot_pipeline.paper_profile_scorer:main"
raspberry-paper-cot-extractor = "raspberry_paper_to_cot_pipeline.paper_cot_extractor:main"
raspberry-cot-quality-assessor = "raspberry_paper_to_cot_pipeline.cot_quality_assessor:main"
raspberry-cot-quality-scorer = "raspberry_paper_to_cot_pipeline.cot_quality_scorer:main"
raspberry-cot-voicing = "raspberry_paper_to_cot_pipeline.cot_voicing:main"
raspberry-cot-voicing-assessor = "raspberry_paper_to_cot_pipeline.cot_voicing_assessor:main"
raspberry-cot-voicing-scorer = "raspberry_paper_to_cot_pipeline.cot_voicing_scorer:main"
raspberry-paper-cot-pipeline = "raspberry_paper_to_cot_pipeline.paper_cot_pipeline:main"
raspberry-generate-training-data = "raspberry_paper_to_cot_pipeline.generate_training_data:main"
raspberry-prepare-training-data = "raspberry_paper_to_cot_pipeline.prepare_training_data:main"
raspberry-fine-tune-openai = "raspberry_paper_to_cot_pipeline.fine_tune_openai:main"

[tool.setuptools.packages.find]
include = ["raspberry_paper_to_cot_pipeline*"]
